--- a/src/test/resources/pages/instructorFeedbackMoveToRecycleBinSuccessful.html
+++ b/src/test/resources/pages/instructorFeedbackMoveToRecycleBinSuccessful.html
@@ -1513,7 +1513,7 @@
       Deleted feedback sessions
     </h2>
     <div class="panel">
-      <div class="panel-heading ajax_submit fill-default" data-target="#recoverySessionsBodyCollapse" id="recoverySessionsHeading">
+      <div class="panel-heading ajax_submit fill-default" data-target="#softDeletedSessionsBodyCollapse" id="softDeletedSessionsHeading">
         <div class="pull-right margin-left-7px">
           <span class="glyphicon ajax_submit glyphicon-chevron-down">
           </span>
@@ -1536,9 +1536,9 @@
           Recycle Bin
         </strong>
       </div>
-      <div class="panel-collapse collapse" id="recoverySessionsBodyCollapse">
+      <div class="panel-collapse collapse" id="softDeletedSessionsBodyCollapse">
         <div class="panel-body padding-0">
-          <table class="table table-bordered table-striped margin-0" id="tableRecoveryFeedbackSessions">
+          <table class="table table-bordered table-striped margin-0" id="tableSoftDeletedFeedbackSessions">
             <thead class="background-color-medium-gray text-color-gray font-weight-normal">
               <tr>
                 <th class="button-sort-none toggle-sort" id="btn_sortid">
@@ -1568,16 +1568,16 @@
             </thead>
             <tbody>
               <tr>
-                <td id="recoverycourseid0">
+                <td id="softdeletedcourseid0">
                   CFeedbackUiT.CS1101
                 </td>
-                <td id="recoverysessionname0">
+                <td id="softdeletedsessionname0">
                   Long Instruction Test ##
                 </td>
-                <td data-date-stamp="${datetime.now.iso8601utc}" data-original-title="${datetime.now}" data-toggle="tooltip" id="recoverysessioncreateddate0">
+                <td data-date-stamp="${datetime.now.iso8601utc}" data-original-title="${datetime.now}" data-toggle="tooltip" id="softdeletedsessioncreateddate0">
                   ${datetime.now.courses}
                 </td>
-                <td data-date-stamp="${datetime.now.iso8601utc}" data-original-title="${datetime.now}" data-toggle="tooltip" id="recoverysessiondeleteddate0">
+                <td data-date-stamp="${datetime.now.iso8601utc}" data-original-title="${datetime.now}" data-toggle="tooltip" id="softdeletedsessiondeleteddate0">
                   ${datetime.now.courses}
                 </td>
                 <td class="align-center no-print">
